--- a/src/assets/Stylesheets/style.css
+++ b/src/assets/Stylesheets/style.css
@@ -204,3 +204,12 @@
 .jumping {
   animation: jump 0.5s infinite; /* Adjust 0.5s for speed, 'infinite' for continuous */
 }
+/* Tailwind doesn't handle this by default */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
